<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfantEducation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_username">账号</string>
    <string name="tv_password">密码</string>
    <string name="btn_registered">注  册</string>
    <string name="btn_login">登  录</string>
    <string name="ev_username">请输入手机号</string>
    <string name="ev_password">请输入密码</string>
    <string name="spinner_title">请选择身份</string>
    <string name="bottom_btn_kindergarten">幼儿园</string>
    <string name="bottom_btn_me">我</string>
    <string name="bottom_btn_inform">通知</string>
    <string name="bottom_btn_paradise">乐园</string>
    <string name="bottom_btn_activity">互动</string>
    <string name="titlebar_name">苏桥实验幼儿园</string>
    <string name="today_food">今日食谱</string>
    <string name="food_zaocan">早餐</string>
    <string name="food_zaocan_time">(7:00–8:30)</string>
    <string name="food_zaodiann">早点</string>
    <string name="food_zaodian_time">(10:00–10:30)</string>
    <string name="food_wucan">午餐</string>
    <string name="food_wucan_time">(11:30–12:30)</string>
    <string name="food_wudian">午点</string>
    <string name="food_wudian_time">(15:00–15:30)</string>
    <string name="food_wancan">晚餐</string>
    <string name="food_wancan_time">(18:00–18:30)</string>
    
    <string name="activity_consult">教育教学</string>
    <string name="activity_course">课程安排</string>
    <string name="activity_dynamic">学生动态</string>
    <string name="activity_evaluate">评价老师</string>
    <string name="dy_allstu">花名册</string>
    <string name="activity_feed">反馈</string>
    <string name="activity_introduction">校园简介</string>
    <string name="activity_plan">课时作业</string>
    <string name="activity_star">明星宝宝</string>
    
    <string name="dy_stu">学生信息</string>
    <string name="dy_tea">教师信息</string>
    <string name="dy_qingjia">请假申明</string>
    <string name="dy_kaoqin">考勤统计</string>
    
    <string name="btn_sure">确定</string>
    <string name="title_tishi">提示</string>
    <string name="title_xiangxi">详细信息</string>
    <string name="title_choose_class">请选择班级</string>
    <string name="dialog_text">您还没有登录!</string>
    <string name="dialog_exit_text">确认退出?</string>
    <string name="btn_dialog_login">登录</string>
    <string name="btn_dialog_dismiss">取消</string>
    
    <string name="feet_et_fankui">请输入您的意见和建议…</string>
    
    <string name="fragment_activity">这是互动fragment</string>
    <string name="fragment_inform">这是通知fragment</string>
    <string name="fragment_kindergarten">这是幼儿园fragment</string>
    <string name="fragment_me">这是我的fragment</string>
    <string name="fragment_paradise">这是乐园fragment</string>
    <string name="test_textview1">测试1</string>
    
    <string name="stu_name">姓名：</string>
    <string name="stu_sex">性别：</string>
    <string name="stu_volk">民族：</string>
    <string name="stu_age">年龄：</string>
    <string name="stu_birthday">出生年月：</string>
    <string name="tea_time">任教时间：</string>
    <string name="stu_class">班级：</string>
    <string name="stu_num">学号：</string>
    <string name="tea_num">工号：</string>
    <string name="stu_parents">家长：</string>
    <string name="tea_lv">学历：</string>
    <string name="stu_parentsphone">联系电话：</string>
    <string name="tea_address">家庭住址：</string>
    <string name="stu_speciality">特长：</string>
    <string name="stu_hea">健康状况：</string>
    <string name="stu_mother">妈妈：</string>
    <string name="stu_father">爸爸：</string>
    <string name="stu_call">CALL</string>
    
    <string name="title_interaction_info">通知</string>
    <string name="title_interaction_infos">通知通告</string>
    <string name="leave_name">请假条</string>
    <string name="leave_enter_lei_name">请选择请假类型</string>
    <string name="leave_enter_time">请输入请假时间</string>
    <string name="leave_enter_data">请输入请假详细内容</string>
    <string name="leave_btn_sure">立即提交</string>
    
    <string name="favicon_btn">更换头像</string>
    <string name="favicon_btn_save">保存头像</string>
    
    <string name="today_syll">今日课程信息</string>
    <string name="today_syll_no">无</string>
    <string name="today_syll_am">上午:</string>
    <string name="today_syll_pm">下午:</string>
    <string name="personal_info_title">个人信息</string>
    
    <string name="xuanzepingjiajiaoshi">选择评价的教师：</string>
    <string name="xuanzebanji">选择班级：</string>
    <string name="shifoumanyi">请选择是否满意：</string>
    <string name="show_edu_info">查看详情</string>
    <string name="person_setting_title">个人设置</string>
    <string name="setting_user_title">账号设置</string>
    <string name="setting_stu_title">学生设置</string>
    <string name="setting_tea_title">教师设置</string>
    <string name="activity_home_work_title">课时作业</string>
    
    <string name="logbook_date_text">日期</string>
    <string name="logbook_am_text">签到时间</string>
    <string name="logbook_pm_text">签退时间</string>
    <string name="logbook_beizhu_text">备注</string>
    
    <string name="updata_psd_title">修改密码</string>
    <string name="updata_psd_old">请输入原密码</string>
    <string name="updata_psd_new">请输入新密码</string>
    <string name="updata_psd_new_again">请再次输入新密码</string>
    <string name="fragment_me_out">退出</string>
    
    <string name="allstu_info_title">我的班级</string>
    <string name="allstu_info_icon">头像</string>
    <string name="allstu_info_name">姓名</string>
    <string name="allstu_info_sex">性别</string>
    <string name="allstu_info_id">学号</string>
    <string name="alltea_info_id">工号</string>
    
    <string name="consult_info_title">详情</string>
    <string name="choose_class_btn">选择班级</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    
    <string name="popup_paizhao">拍照</string>
    <string name="popup_choose">从相册选择</string>
    <string name="popup_dismiss">取消</string>
    
    <string name="addinter_title">发表</string>
    <string name="enter_interaction_hint">请输入内容</string>
    
    <string name="cancel">取消</string>
    <string name="publish_empty_text">想说什么…</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_local">从相册中选取</string>
    <string name="school_news_title">乐园风采</string>
    <string name="school_news_info">详情</string>
    <string name="baby_works_title">宝宝作品</string>
    <string name="add_lb">考勤</string>
    <string name="parents_later">家长信</string>
    <string name="post_message">发布通知</string>
    <string name="teacher_comment_title">教师点评</string>
    <string name="title_enter">输入内容</string>
    

</resources>
