<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:id="@+id/stu_info_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#2EB976" >

        <ImageView
            android:id="@+id/titlebar_btn_teaback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dy_tea"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stu_info_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stu_info_title" >

        <ImageView
            android:id="@+id/tea_info_low1_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/head_icon" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_below="@id/stu_info_row2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="10dp"
            android:text="@string/stu_name" />

        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="9dp"
            android:text="@string/stu_sex" />
        
        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="9dp"
            android:text="@string/stu_volk" />

        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="9dp"
            android:text="@string/stu_class" />

        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="9dp"
            android:text="@string/tea_num" />

        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="10dp"
            android:text="@string/tea_time" />

        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="10dp"
            android:text="@string/tea_lv" />

        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="10dp"
            android:text="@string/tea_address" />
        
        <TextView
            style="@style/stu_info_style"
            android:layout_marginTop="10dp"
            android:text="@string/stu_parentsphone" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tea_info_name"
            style="@style/stu_info_style"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tea_info_sex"
            style="@style/stu_info_style"
            android:layout_marginTop="9dp" />
        
        <TextView
            android:id="@+id/tea_info_volk"
            style="@style/stu_info_style"
            android:layout_marginTop="9dp" />

        <TextView
            android:id="@+id/tea_info_class"
            style="@style/stu_info_style"
            android:layout_marginTop="9dp" />

        <TextView
            android:id="@+id/tea_info_num"
            style="@style/stu_info_style"
            android:layout_marginTop="9dp" />

        <TextView
            android:id="@+id/tea_info_birthday"
            style="@style/stu_info_style"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tea_info_parents"
            style="@style/stu_info_style"
            android:layout_marginTop="10dp" />
        
        <TextView
            android:id="@+id/tea_info_address"
            style="@style/stu_info_style"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tea_info_parentsphone"
            style="@style/stu_info_style"
            android:layout_marginTop="10dp" />
    </LinearLayout>
    
    </LinearLayout>
    

</RelativeLayout>
