<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#2EB976" >
        
        <ImageView
            android:id="@+id/titlebar_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/today_food"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <!-- 早餐 -->

    <LinearLayout
        android:id="@+id/food_zaocan"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10sp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_zaocan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_zaocan_time"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/food_zaocan_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <!-- 早点 -->

    <LinearLayout
        android:id="@+id/food_zaodian"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10sp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_zaodiann" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_zaodian_time"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/food_zaodian_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <!-- 午餐 -->

    <LinearLayout
        android:id="@+id/food_wucan"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10sp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_wucan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_wucan_time"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/food_wucan_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <!-- 午点 -->

    <LinearLayout
        android:id="@+id/food_wudian"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10sp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_wudian" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_wudian_time"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/food_wudian_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <!-- 晚餐 -->

    <LinearLayout
        android:id="@+id/food_wancan"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10sp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_wancan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_wancan_time"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/food_wancan_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>